# tel-os

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.py  hook_grok.py  pyproject copy.toml  pyproject.toml  requirements.txt
configs/: aggressive.yaml  benign.yaml  default.yaml  model_config.yaml  production.yaml
docs/: whitepaper.md
experiments/modal/: xp_08_validation.py  xp_11_ablation.py
src/governance/: telos_v2_governor.py
src/telos/: __init__.py
src/telos/core/: __init__.py  engine.py
src/telos/core/hooks/: __init__.py  hooks.py
src/telos/core/standardized/: __init__.py
tel-os-final/: README.md  pyproject.toml
tel-os-final/telos/core/: __init__.py
tel-os-final/telos/core/standardized/: standardized_engine.py
telos/: __init__.py  governor.py
tests/: test_governor.py
