[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telos"
version = "2.0.0"
description = "TEL-OS: Tensor-Based Ethical Layer for Operational Safeguards"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "TEL-OS Team", email = "telos@example.com" }
]
keywords = ["ai", "interpretability", "governance", "bias-mitigation", "sparse-autoencoders", "mechanistic-interpretability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "transformer_lens>=1.8.0",
    "sae_lens>=0.5.0",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "redis>=4.5.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ipykernel>=6.23.0",
    "jupyter>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]


[tool.hatch.build.targets.wheel]
packages = ["telos"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python-version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
