[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "telos-governance"
dynamic = ["version"]
description = "TEL-OS SDK for LLM Governance and Control"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TEL-OS Team"},
]
keywords = ["llm", "governance", "ai", "transformers", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "numpy>=1.21.0",
    "accelerate>=0.24.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.21.0",
    "huggingface-hub>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
include = ["telos*"]

[project.urls]
Homepage = "https://github.com/jostoz/tel-os"
Repository = "https://github.com/jostoz/tel-os.git"
Documentation = "https://github.com/jostoz/tel-os/blob/main/README.md"